# AdventOfCode2021

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
day_01/: Cargo.toml
day_01/src/: main.rs
day_04/src/: main.rs
day_07/src/: main.rs
day_08/: Cargo.toml
day_08/src/: main.rs
day_08_alternative/: Cargo.toml
day_1/: Cargo.toml
day_1/part_1/: Cargo.toml
day_1/part_1/src/: main.rs
day_1/part_2/: Cargo.toml
day_1/part_2/src/: main.rs
day_1/src/: main.rs
day_10/src/: main.rs
day_11/src/: main.rs
day_12/src/: main.rs
day_13/src/: main.rs
day_14/: Cargo.toml
day_14/src/: main.rs
day_15/src/: main.rs
day_16/: test.txt
day_16/src/: main.rs
day_17/: Cargo.toml  input.txt
day_17/src/: main.rs
day_18/: input.txt
day_18/src/: main.rs
day_19/: Cargo.toml
day_19/src/: main.rs
day_2/src/: main.rs
day_20/src/: main.rs
day_21/src/: main.rs
day_22/: Cargo.toml
day_22/src/: main.rs
day_3/: Cargo.toml
day_3/src/: main.rs
day_4/: Cargo.toml
day_4/src/: main.rs
day_5/: Cargo.toml
day_5/src/: main.rs
day_6/: Cargo.toml
day_6/src/: main.rs
day_7/: Cargo.toml
day_7/src/: main.rs
day_8/: Cargo.toml
day_8/src/: main.rs
day_8_alternative/src/: main.rs
day_9/src/: main.rs
